package processUtility;

// To compile the protocol buffer definition, run protoc with the --go_out
// parameter set to the directory you want to output the Go code to.
//
//	protoc --go_out=. *.proto

message Process {

	optional int32 processID = 1;
	optional int32 virtualSize = 2;
	optional string timeStarted = 3;
	optional string command = 4;
	optional bool wasOpened = 5;
	optional bool wasClosed = 6;

	}

message ProcessSet {
	
	repeated Process processes = 1;
	
	}
